Issue#230 Tasks: Fixed wordwrap issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1269,7 +1269,9 @@ h6 {
   margin-bottom: 20px;
   font-family: 'Arial','Helvetica',sans-serif;
   position: relative;
-  cursor: default; }
+  cursor: default;
+  word-wrap: break-word;
+}
 .card-white-panel .invoice-name {
   float: left;
   width: 40px;
